[package]
name = "leptos-ssr-example"
version = "0.1.0"
edition = "2024"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
    "dep:console_error_panic_hook",
]
ssr = [
    "dep:roadster",
    "dep:axum",
    "dep:tokio",
    "dep:tokio-util",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "leptos/ssr",
    "dep:tracing",
]

[dependencies]
roadster = { version = "0.7.0-beta.6", path = "../..", optional = true, default-features = false, features = ["http", "cli"] }
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
anyhow = { workspace = true }
tracing = { workspace = true, optional = true }
async-trait = { workspace = true }
clap = { workspace = true }

# Http API
axum = { workspace = true, optional = true }

serde = { workspace = true, features = ["derive"] }

# Leptos
leptos = "0.8.0-alpha"
console_error_panic_hook = { version = "0.1", optional = true }
leptos_axum = { version = "0.8.0-alpha", optional = true }
leptos_meta = { version = "0.8.0-alpha" }
leptos_router = { version = "0.8.0-alpha" }
leptos_config = { version = "0.8.0-alpha" }
tower = { workspace = true, features = ["full"], optional = true }
tower-http = { workspace = true, features = ["full"], optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }

# Defines a size-optimized profile for the WASM bundle in release mode
# Commented out here because profiles are ignored for packages that aren't the workspace root
#[profile.wasm-release]
#inherits = "release"
#opt-level = 'z'
#lto = true
#codegen-units = 1
#panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "leptos-ssr-example"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
#lib-profile-release = "wasm-release"

#[[bin]]
#name = "leptos_ssr_example"
#path = "./src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "leptos_ssr_example"
path = "./src/lib.rs"
