[package]
name = "minimal"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roadster = { version = "0.2", path = "../.." }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
aide = { workspace = true }
axum = { workspace = true }
schemars = { workspace = true }

# DB
entity = { path = "entity" }
migration = { path = "migration" }
clap = { version = "4.3.0", features = ["derive"] }

# The default `rss-stats` feature has a dependency that currently can't be satisfied (memchr: ~2.3)
rusty-sidekiq = { version = "0.10.5", default-features = false }
serde = { version = "1.0.184", features = ["derive"] }

[[bin]]
name = "minimal"
path = "./src/main.rs"

[lib]
name = "minimal"
path = "./src/lib.rs"

