[package]
name = "powerset_matrix"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-manifest = { workspace = true }
itertools = { workspace = true }
anyhow = { workspace = true }