[package]
name = "app-context-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
roadster = { path = "../../.." }
axum = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
sea-orm = { workspace = true }

[dev-dependencies]
roadster = { path = "../../..", features = ["db-sea-orm", "testing-mocks"] }
sea-orm = { workspace = true, features = ["mock"] }
tokio = { workspace = true, features = ["test-util"] }
