[package]
name = "email-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
roadster = { path = "../../..", features = ["email-smtp", "email-sendgrid", "worker-pg"] }
aide = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }
lettre = { workspace = true }
sendgrid = { workspace = true }
bon = { workspace = true }
leptos = "0.8.0-alpha"
