[package]
name = "service"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
roadster = { path = "../../.." }
aide = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
rusty-sidekiq = { workspace = true }
