[package]
name = "service-example"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["grpc"]
grpc = ["roadster/grpc", "dep:tonic", "dep:tonic-reflection", "dep:prost", "roadster/grpc"]


[dependencies]
roadster = { path = "../../.." }
aide = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
rusty-sidekiq = { workspace = true }
tokio-util = { workspace = true }
cron = "0.15.0"

# gRPC API
tonic = { workspace = true, optional = true }
tonic-reflection = { workspace = true, optional = true }
prost = { workspace = true, optional = true }

[build-dependencies]
tonic-build = { workspace = true }
