[package]
name = "testing-example"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
roadster = { path = "../../.." }
uuid = { workspace = true, features = ["v4"] }
async-trait = { workspace = true }

[dev-dependencies]
roadster = { path = "../../..", features = ["testing"] }
insta = { workspace = true }
rstest = { workspace = true }
